feat(archive): derive filenames from extracted text content
Instead of keeping generic upload names (IMG_001.png), the archive now
names files using a slug derived from the first line of extracted text.
E.g. "Board Meeting Minutes" becomes board-meeting-minutes.png/.txt.
Falls back to the original filename if extracted text is too short.

https://claude.ai/code/session_01J6i5PuyzR5fDLwEpUaExDJ